syntax = "proto3";

package api.admin.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";
import "protobuf/enum.proto";
import "protobuf/struct.proto";

option go_package = "github.com/beiduoke/go-scaffold/api/admin/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.admin.v1";
option java_outer_classname = "adminProtoV1";

// The api service definition.
service ApiService {
  // 列表接口
  rpc ListApi (api.protobuf.PagingReq) returns (api.protobuf.PagingReply) {
    option (google.api.http) = {
      get: "/admin/v1/apis"
    };
  }
  
  // 创建接口
  rpc CreateApi (CreateApiReq) returns (CreateApiReply) {
    option (google.api.http) = {
      post: "/admin/v1/apis"
      body: "data"
    };
  }
  
  // 获取接口
  rpc GetApi (GetApiReq) returns (Api) {
    option (google.api.http) = {
      get: "/admin/v1/apis/{id}"
    };
  }
  
  // 修改接口
  rpc UpdateApi (UpdateApiReq) returns (UpdateApiReply) {
    option (google.api.http) = {
      put: "/admin/v1/apis/{id}"
      body: "data"
    };
  }
  
  // 删除接口
  rpc DeleteApi (DeleteApiReq) returns (DeleteApiReply) {
    option (google.api.http) = {
      delete: "/admin/v1/apis/{id}"
    };
  }
}

// 接口模块
message Api {
  optional google.protobuf.Timestamp created_at = 1;
  optional google.protobuf.Timestamp updated_at = 2;
  optional uint64 id = 3;
  optional string name = 4;
}

// 请求 - 创建接口
message CreateApiReq {
  message Data {
    string name = 1 [(validate.rules).string = {min_len: 1, max_len: 10}];
  }
  Data data = 1;
}

// 回应 - 创建接口
message CreateApiReply {
  bool success = 1;
  string message = 2;
}

// 请求 - 修改接口
message UpdateApiReq {
  uint64 id = 1;
  message Data {
  }
  Data data = 2;
}

// 回应 - 创建接口
message UpdateApiReply {
  bool success = 1;
  string message = 2;
}

// 请求 - 获取接口
message GetApiReq {
  uint64 id = 1;
}

// 请求 - 删除接口
message DeleteApiReq {
  uint64 id = 1;
}

// 回应 - 删除接口
message DeleteApiReply {
  bool success = 1;
  string message = 2;
}
